# Bsdiff

./: README.md  settings.gradle
app/: .gitignore  build.gradle
app/src/androidTest/java/com/sll/bsdiff/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/sll/bsdiff/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/sll/bsdiff/: ExampleUnitTest.kt
bsdifflib/: build.gradle
bsdifflib/src/androidTest/java/com/sll/bsdifflib/: ExampleInstrumentedTest.kt
bsdifflib/src/main/: AndroidManifest.xml
bsdifflib/src/main/cpp/: CMakeLists.txt
bsdifflib/src/main/cpp/bspatch/: bspatch.c  bspatch_lib.cpp
bsdifflib/src/main/java/com/sll/bsdifflib/: BsPatchUtils.kt
bsdifflib/src/main/res/values/: strings.xml
bsdifflib/src/test/java/com/sll/bsdifflib/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
